Added working training + server + webpage demo

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -8,11 +8,11 @@
 
 <body>
 
-	<p><textarea id="input" name="input" rows="4" cols="50"></textarea></p>
+	<p><textarea id="input" name="input" rows="4" cols="30"></textarea></p>
 
 	<button onclick="talkToRobot()">Click me</button>
 	
-	<p id="output">...</p>
+	<p id="output">Write text here</p>
 
 </body>
 </html>
